examples/test/testpolicy7351.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7351
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key0: value30
      key12: value40
      key32: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value41
      podSelector:
        matchLabels:
          key36: value34
